feat: initial commit

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_NHOST_SUBDOMAIN="YOUR_NHOST_APP_SUBDOMAIN"
 NEXT_PUBLIC_NHOST_REGION="YOUR_NHOST_APP_REGION"
+SPOTIFY_REFRESH_TOKEN=AQDk8Bhz43VJ5fWvS9Jdm7B7c8iEckHXnxTAfXTcONc8MUOAIaYQDa_cxN9bcJUNqqnt-TMoAamKYkCt_SvFfgcAUPTIimDalp-F66sLH35dHrNsr8vIIA2i8rA774RBCTk
+SPOTIFY_CLIENT_ID=0647dacb86584355a714c67a937ac0a6
+SPOTIFY_CLIENT_SECRET=0f6cb93b7f154d2cb5d32ca85293f478
