--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-hot-toast": "^2.2.0"
+    "react-hot-toast": "^2.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/node": "^18.6.3",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "12.1.5",
+    "typescript": "^4.7.4"
   }
 }
